ansible/100-exemplos/files/hello/hello-gateway-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-httproute
  namespace: exemplos
spec:
  parentRefs:
  - name: traefik-gateway-publico
    namespace: traefik
    sectionName: web
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hello-ingress
      port: 80
