ansible/100-exemplos/files/hello/08-hello-networkpolicies.yml
# Deployments web do hello: recebe Traefik + DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-web-policy
  namespace: exemplos
spec:
  podSelector:
    matchLabels:
      app: hello-app
      componente: web
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    ports:
    - protocol: TCP
      port: 80
  - from:
    - podSelector:
        matchLabels:
          app: hello-app
          componente: cronjob
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: coredns
    ports:
    - protocol: UDP
      port: 53

---
# CronJob stress test: acessa hello-svc + DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-cronjob-policy
  namespace: exemplos
spec:
  podSelector:
    matchLabels:
      app: hello-app
      componente: cronjob
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: hello-app
          componente: web
    ports:
    - protocol: TCP
      port: 80
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: coredns
    ports:
    - protocol: UDP
      port: 53
